Styling modifications to improve the functionality of the footer and to ensure against overflow

--- a/public/style.css
+++ b/public/style.css
@@ -145,110 +145,114 @@
 }
 
 #speedSlider{
-width: 65% !important;
-margin-bottom: -6px;
+  width: 65% !important;
+  margin-bottom: -6px;
 }
 
 #sliderContainer {
-display: table;
-margin: 0 auto;
-width: 90%;
-}
+  display: table;
+  margin: 0 auto;
+  width: 90%;
+  }
 
 #centerSpeed {
-display: table;
-margin: 0 auto;
+  display: table;
+  margin: 0 auto;
 }
 
 .col1 {
-width: 80px;
-display: inline-block;
+  width: 80px;
+  display: inline-block;
 }
 
 .col2 {
-width: 200px;
-display: inline-block;
+  width: 200px;
+  display: inline-block;
 }
 
 .loopSelection {
-margin-left: 40px;
-margin-top: 10px;
-display: none;
-margin-bottom: 0px;
+  margin-left: 40px;
+  margin-top: 10px;
+  display: none;
+  margin-bottom: 0px;
 }
 
 #footer {
   position: relative;
-bottom: 0px;
-margin: 0px auto;
-padding: 10px;
-text-align: right;
-border: 2px solid black;
-width: 1000px;
-background-color: #e2e0e0;
-border-radius: 4px;
-margin-bottom: 3px;
+  bottom: 0px;
+  margin: 0px auto;
+  padding: 10px;
+  text-align: right;
+  border: 2px solid black;
+  width: 1000px;
+  background-color: #e2e0e0;
+  border-radius: 4px;
+  margin-bottom: 3px;
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
 }
 
 #dayLoop {
-width: 30px;
+  width: 30px;
 }
 
 #attribution {
-margin-top: 50px;
-font-size: 12.5px;
-position: absolute; 
-bottom: 0;
+  margin-top: 50px;
+  font-size: 12.5px;
+  position: absolute; 
+  bottom: 0;
 }
 
 .timeline {
--webkit-appearance: none;
-width: 80%;
-height: 15px;
-border-radius: 7px;
-background: #d3d3d3;
-outline: none;
--webkit-transition: .2s;
-transition: opacity .2s;
-margin-left: 10%;
+  -webkit-appearance: none;
+  width: 90%;
+  height: 15px;
+  border-radius: 7px;
+  background: #d3d3d3;
+  outline: none;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  margin-left: 5%;
 }
 
 .timeline::-webkit-slider-thumb {
--webkit-appearance: none;
-appearance: none;
-width: 15px;
-height: 15px;
-border-radius: 7px;
-background: #0974ff;
-cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 7px;
+  background: #0974ff;
+  cursor: pointer;
 }
 
 .yearSelect {
-display: none;
+  display: none;
 }
 
 .timeline::-moz-range-thumb {
-width: 15px;
-height: 15px;
-border-radius: 7px;
-background: #0974ff;
-cursor: pointer;
-}
+  width: 15px;
+  height: 15px;
+  border-radius: 7px;
+  background: #0974ff;
+  cursor: pointer;
+  }
 
 .dateSelect {
-display: inline-block;
+  display: inline-block;
 }
 
 #sYear, #eYear {
-width: 80px;
+  width: 80px;
 }
 
 .timelineScale {
-width: 19%;
-display: inline-block;
-text-align: center;
+  margin-left: 46px;
+  display: inline-block;
+  text-align: center;
+}
+
+#scale0 {
+  margin-left: 10px;
 }
